log/build_2024-07-22_15-03-42/ts_english/stderr.log
  File "/home/unghui/turtlebot_says_ros2_ws/install/ts_english/lib/python3.8/site-packages/ts_english/draw_english_srv.py", line 151
    main()0
          ^
SyntaxError: invalid syntax

